--- a/HOME.HTML
+++ b/HOME.HTML
@@ -173,8 +173,7 @@
 אורך האמה כ-200 מטרים. התוואי לא הושלם, ולפי הערכות, ייתכן שעקב קשיים טכניים או כלכליים לא הצליחו הרומאים להשלימה, ומאז נשארה לא גמורה.
 המצב כיום היום, אמת המים הבלתי גמורה בבנימינה מהווה אתר ארכיאולוגי מעניין, שבו ניתן להתרשם מההנדסה הרומית. האמה, הבנוייה מאבן, כוללת שיפוע מחוכם וארכיטקטורה מרשימה, שיכולה להמחיש את השאיפה של הרומאים לניצול מקסימלי של משאבי המים.
 החשיבות ההיסטורית של האתר האתר מהווה עדות לא רק להישג ההנדסי של הרומאים, אלא גם לחשיבות הרבה שהייתה לתשתיות מים בעידן הרומי. השאיפה לשלוט בזרימת המים ולמנוע בעיות של הצפות או חוסרים הייתה אבן יסוד בתכנון ערים מתקדם, במיוחד בערים גדולות כמו קיסריה.
-הפוטנציאל התיירותי והחינוכי האתר נמצא בסמוך לאתרים תיירותיים נוספים באזור, ויש בו פוטנציאל לפיתוח תיירותי ולחינוך הציבור בנושא ההיסטוריה וההנדסה הרומית. פיתוח מסלול סיור ומידע נוסף על האתר עשוי להעשיר את חוויית המבקרים ולחבר אותם להיסטוריה המרתקת של המקום.
-.</p>
+הפוטנציאל התיירותי והחינוכי האתר נמצא בסמוך לאתרים תיירותיים נוספים באזור, ויש בו פוטנציאל לפיתוח תיירותי ולחינוך הציבור בנושא ההיסטוריה וההנדסה הרומית. .</p>
     </section>
     
     <section class="container">
@@ -195,7 +194,7 @@
 בכניסה לאתר ניצבים שני גלגלי ברזל גדולים, המחוברים למנגנון השאיבה העתיק של הבאר, אשר שוכנת בתוך מבנה אבן מסורג. בעבר שימשה הבאר להשקיית שדות דרך מערכת תעלות, באמצעות אנטילים – כלי קיבול שאספו מים מהבאר והעבירו אותם לבריכת האגירה הצמודה.
 בתחילת המאה ה-20 שימשה הבאר גם לצרכים ביתיים של מתיישבי חאן זרעוניה. עם רכישת האזור על ידי יק"א, נערך במקום שיפוץ משמעותי: הותקן מנוע דיזל, ונפרסה מערכת צינורות מתכת שהובילה מים לחווה החקלאית הניסיונית שפעלה בסביבה.
 בשנות ה-30 של המאה ה-20, לאחר פירוק החווה, רכש האגרונום ד"ר גוסטב רייך את השטח, כולל הבאר והפרדס הצמוד לה. כאשר הבאר התייבשה בעקבות קידוחים נוספים באזור, הוזרמו מים לבריכה מבארות סמוכות, ומשם הועברו לתעלות ההשקיה.
-כיום, לאחר שחזור שנעשה בשיתוף מועצת בנימינה, המועצה לשימור אתרים ותרומת משפחת מוזס, משמשת הבאר האנטילית כאתר תיירות, מחקר ופעילויות חינוכיות, ומספרת את סיפור ההתיישבות והחקלאות באזור.
+כיום, לאחר שחזור שנעשה בשיתוף מועצת בנימינה, המועצה לשימור אתרים ותרומת משפחת מוזס, משמשת הבאר האנטילית  ומספרת את סיפור ההתיישבות והחקלאות באזור.
 .</p>
     </section>
     
