--- a/HOME.HTML
+++ b/HOME.HTML
@@ -241,9 +241,9 @@
         <div class="modal-content">
             <span class="close-btn" onclick="closeProcessModal()">&times;</span>
             <h2>תהליך העבודה</h2>
-            <p>בפרויקט טיפוח גני בנימינה עברנו תהליך מחקרי וטכנולוגי שכלל מספר שלבים חשובים:</p>
+            <p>בפרויקט טיפוח אתרם בנימינה עברנו תהליך מחקרי וטכנולוגי שכלל מספר שלבים חשובים:</p>
             <ul class="process-list">
-                <li><strong>חקר האתרים:</strong> למידת ההיסטוריה והמאפיינים של הגנים בבנימינה.</li>
+                <li><strong>חקר האתרים:</strong> למידת ההיסטוריה והמאפיינים של האתרים בבנימינה.</li>
                 <li><strong>סיעור מוחין:</strong> כיצד להציג את המידע באופן ויזואלי וידידותי למשתמש.</li>
                 <li><strong>פיתוח האתר:</strong> בשל העניין הרב בטכנולוגיה, הוחלט על פיתוח אתר אינטראקטיבי.</li>
                 <li><strong>שימוש בבינה מלאכותית:</strong> קבלת מידע, הצעות ושיחה עם מודלי AI לתכנון האתר.</li>
